Fix form spacing

--- a/assets/admin/editor-wizard/style.scss
+++ b/assets/admin/editor-wizard/style.scss
@@ -161,7 +161,7 @@
 	&__form {
 		& label {
 			font-weight: bold;
-			margin-top: 30px;
+			margin-top: 20px;
 		}
 	}
 }
